2007-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_air, igraph_evolver_mes_air)
	(igraph_evolver_st_air, igraph_evolver_error_air) : added

	* src/evolver.c (igraph_evolver_ir, igraph_evolver_mes_ir)
	(igraph_evolver_st_ir, igraph_evolver_error_ir) : added

	* src/evolver.c (igraph_evolver_il, igraph_evolver_mes_il)
	(igraph_evolver_st_il, igraph_evolver_error_il) : added


2007-04-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector_pmt.hc (igraph_vector_init_real)
	(igraph_vector_init_real_end) : va_arg type corrected to be 
	self-promoting

	* src/types.h
	* src/vector.c
	* src/igraph_pmt.h
	* src/igraph_pmt_off.h
	* src/vector.h
	* src/vector_pmt.hc : vector functions moved from vector.c to 
	vector_pmt.hc, from types.h to vector.h, poor man's templates 
	introduced based on GSL

2007-04-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/adjlist.c (igraph_i_lazy_adjedgelist_init)
	(igraph_i_lazy_adjedgelist_destroy, igraph_i_lazy_adjedgelist_get)
	(igraph_i_lazy_adjedgelist_get_real) : added

2007-04-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_is_loop) : added
	* examples/simple/igraph_is_loop.c : added

	* src/igraph.h (IGRAPH_FROM, IGRAPH_TO, IGRAPH_OTHER) : added

	* src/evolver.c (igraph_evolver_l, igraph_evolver_dl) : slight change

	* src/evolver.c (igraph_evolver_d, igraph_evolver_ad)
	(igraph_evolver_ade, igraph_evolver_e, igraph_evolver_de)
	(igraph_evolver_l, igraph_evolver_dl, igraph_evolver_el)
	(igraph_evolver_r, igraph_evolver_ar, igraph_evolver_di)
	(igraph_evolver_adi) : progress bar added

2007-04-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_mes_d, igraph_evolver_error_d) : 
	modify to comply the usual scheme

	* src/evolver.c (igraph_evolver_adi, igraph_evolver_mes_adi)
	(igraph_evolver_st_adi, igraph_evolver_error_adi) : added

2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_di, igraph_evolver_mes_di)