@@ -747,6 +747,8 @@ int igraph_topological_sorting(const igraph_t *graph, igraph_vector_t *res,
 			       igraph_neimode_t mode);
 int igraph_is_loop(const igraph_t *graph, igraph_vector_t *res, igraph_es_t es);
 int igraph_is_multiple(const igraph_t *graph, igraph_vector_t *res, igraph_es_t es);
+int igraph_girth(const igraph_t *graph, igraph_integer_t *girth, 
+		 igraph_vector_t *circle);
 
 /* TODO: degree.distribution (?) */
 
